<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_purple_gradient"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:background="@drawable/bg_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/user_account"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/hint_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hint_welcome_back"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/WelcomeTextSize"
        app:layout_constraintBottom_toTopOf="@+id/hint_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/hint_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hint_sign_in"
        android:textColor="@color/colorLightGray"
        android:textSize="@dimen/signInMessage"
        app:layout_constraintTop_toBottomOf="@id/hint_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint_signIn_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/WelcomeTextSize"
        android:text="@string/hint_sign_in_title"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/txtusername"
        android:hint="@string/hint_username"
        android:layout_width="0dp"
        android:paddingStart="16dp"
        android:drawablePadding="16dp"
        android:background="@drawable/bg_input"
        android:drawableStart="@drawable/ic_account_circle_white_24dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/colorWhite"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:layout_height="@dimen/cornerRadius"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_signIn_header"
        />

    <EditText
        android:id="@+id/txtpassword"
        android:hint="@string/hint_password"
        android:layout_width="0dp"
        android:paddingStart="16dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:background="@drawable/bg_input"
        android:paddingEnd="16dp"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_height="@dimen/cornerRadius"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtusername"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/hint_sign_in_title"
        android:textColor="@color/colorTextButton"
        android:background="@drawable/bg_btn_primary"
        android:layout_height="@dimen/cornerRadius"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtpassword"/>

    <TextView
        android:id="@+id/txtpasswordreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hint_reset_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/signInMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

</android.support.constraint.ConstraintLayout>